# rdw-ingestion-tools

./: .flake8.cfg  LICENSE  README.md  pyproject.toml  setup.py
.ci/: fmt.sh  lint.sh
.github/workflows/: black.yaml  isort.yaml  lint.yaml  release.yaml  test.yaml
examples/: inbounds_ud.py  test.py
examples/aaq/: faqmatches.py  faqranks.py  inbounds.py  inbounds_ud.py  urgency_rules.py
examples/aaqv2/: contents.py  queries.py  urgency_queries.py  urgency_rules.py
examples/content_repo/: pages.py  pageviews.py
examples/flow_results/: flows.py  responses.py
examples/mqr/: mqr.py
examples/rapidpro/: contacts.py  fields.py  flows.py  flowstarts.py  groups.py  runs.py
examples/s3_utils/: s3_utils.py  unify.py
examples/turn/: contacts.py  content.py  messages.py
examples/turn_bq/: cards.py  chats.py  contacts.py  flow_results.py  flow_results_data_packages.py  messages.py  statuses.py
rdw_ingestion_tools/api/: __init__.py
rdw_ingestion_tools/api/aaq/: __init__.py  main.py
rdw_ingestion_tools/api/aaq/extensions/: httpx.py
rdw_ingestion_tools/api/aaq/requests/: faqmatches.py  inbounds.py  inbounds_ud.py  urgency_rules.py
rdw_ingestion_tools/api/aaqv2/: __init__.py  main.py
rdw_ingestion_tools/api/aaqv2/extensions/: httpx.py
rdw_ingestion_tools/api/aaqv2/requests/: contents.py  faqmatches.py  queries.py  urgency_queries.py  urgency_rules.py
rdw_ingestion_tools/api/aaqv2/schemas/: contents.py  queries.py  urgency_queries.py  urgency_rules.py
rdw_ingestion_tools/api/content_repo/: __init__.py  main.py
rdw_ingestion_tools/api/content_repo/extensions/: httpx.py
rdw_ingestion_tools/api/content_repo/requests/: assessments.py  page_views.py  pages.py
rdw_ingestion_tools/api/flow_results/: __init__.py  client.py  main.py
rdw_ingestion_tools/api/flow_results/extensions/:  *Minibuf-1*  httpx.py
rdw_ingestion_tools/api/flow_results/requests/: flows.py  responses.py
rdw_ingestion_tools/api/rapidpro/: __init__.py  main.py
rdw_ingestion_tools/api/rapidpro/extensions/: dataframe.py  httpx.py
rdw_ingestion_tools/api/rapidpro/requests/: contacts.py  fields.py  flow_starts.py  flows.py  groups.py  runs.py
rdw_ingestion_tools/api/survey/: __init__.py  main.py
rdw_ingestion_tools/api/survey/extensions/: httpx.py
rdw_ingestion_tools/api/survey/requests/: mqr.py
rdw_ingestion_tools/api/turn/: __init__.py
rdw_ingestion_tools/api/turn/extensions/: httpx.py
rdw_ingestion_tools/api/turn/requests/: contacts.py  messages.py
rdw_ingestion_tools/api/turn_bq/: __init__.py  client.py  main.py
rdw_ingestion_tools/api/turn_bq/extensions/: dataframe.py  httpx.py
rdw_ingestion_tools/api/turn_bq/requests/: cards.py  chats.py  contacts.py  flow_results.py  flow_results_data_packages.py  messages.py  statuses.py
rdw_ingestion_tools/api/turn_bq/schemas/: cards.py  chats.py  contacts.py  flow_results.py  flow_results_data_packages.py  messages.py  statuses.py
rdw_ingestion_tools/s3/: main.py
rdw_ingestion_tools/s3/s3/: s3.py
src/api/: __init__.py  main.py
src/api/aaq/: __init__.py  main.py
src/api/aaq/requests/: faqmatches.py  faqrank.py  inbounds.py  inbounds_ud.py  urgency_rules.py
src/api/content_repo/: __init__.py  main.py
src/api/content_repo/requests/: page_views.py  pages.py
src/api/flow_results/: __init__.py  main.py
src/api/flow_results/requests/: flows.py  responses.py
src/api/rapidpro/: __init__.py  main.py
src/api/rapidpro/requests/: contacts.py  fields.py  flow_starts.py  flows.py  groups.py  runs.py
src/api/survey/: __init__.py  main.py
src/api/survey/requests/: mqr.py
src/api/turn/: __init__.py  main.py
src/api/turn/requests/: contacts.py  content.py  messages.py
src/s3/: __init__.py  main.py
src/s3/s3/: s3.py
tests/: conftest.py  test_aaqv2.py
tests/fake_aaqv2/: api.py  models.py
tests/flow_results/: test_flow_results_httpx.py
tests/test_aaqv2/: test_aaqv2.py
tests/test_concatenation/: test_concatenation.py
tests/test_pagination/: test_rapidpro_pagination.py
tests/turn_bq/: test_turn_bq_httpx.py
