[tool.poetry]
name = "rdw-ingestion-tools"
version = "0.3.4"
description = "A Python package for integrating third-party data to Reach Digital Health's AWS Datta Lake."
authors = ["Schalk1e <schalk@reachdigitalhealth.org>"]
license = "MIT"
readme = "README.md"
packages = [
   {include = "api", from = "src"},
   {include = "s3", from = "src"}
   ]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.103"
pandas = "^2.2.2"
requests = "^2.31.0"
awswrangler = "^3.7.3"
attrs = "^23.2.0"
httpx = "^0.27.0"

[tool.poetry.group.types.dependencies]
pandas-stubs = "^2.2.1.240316"
types-requests = "^2.31.0.20240406"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
black = "^24.4.2"
yamllint = "^1.35.1"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.mypy]
exclude = [  # Regexes.
    '^src/s3/',
    '^src/api/aaq/',
    '^src/api/flow_results/',
    '^src/api/rapidpro/',
    '^src/api/survey/',
    '^src/api/turn/',
]
files = "."

follow_imports = "skip"
ignore_missing_imports = false
disallow_untyped_defs = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
filterwarnings = []

[tool.ruff]
target-version = "py311"
line-length = 79
select = [
    "E", "F", "W", # pycodestyle + pyflakes == flake8 - mccabe
    "I",           # isort
    "B",           # flake8-bugbear
    "UP",          # pyupgrade
    "S",           # flake8-bandit
    "C4",          # flake8-comprehensions
    "PIE",         # flake8-pie
    "SIM",         # flake8-simplify
    "PTH",         # flake8-use-pathlib
]
ignore = [
    "E402",   # Example: src/api/flow_results/__init__.py:80:0
]