[project]
name = "rdw-ingestion-tools"
version = "2.0.4"
description = "A Python package for integrating third-party data to Reach Digital Health's AWS Data Lake."
authors = [
    {name = "Schalk <schalk@reachdigitalhealth.org>"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=23.2.0",
    "awswrangler>=3.7.3",
    "boto3>=1.34.103",
    "httpx>=0.27.0",
    "httpx-retries>=0.4.2",
    "pandas>=2.2.2",
    "types-tqdm>=4.66.0.20240417",
]

[project.optional-dependencies]
polars = [
    "polars>=1.31.0",
    "pyarrow>=18.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.7",
    "yamllint>=1.35.1",
    "tqdm>=4.66.5",
    "pandas-stubs>=2.2.3.250308",
    "boto3-stubs>=1.37.19",
    "starlette>=0.46.1",
    "pytest-coverage>=0.0",
    "pytest-mock>=3.14.1",
    "werkzeug>=3.1.3",
]

[tool.coverage.run]
omit = [
    "tests/*"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "rdw_ingestion_tools/api", "rdw_ingestion_tools/s3"]


[tool.mypy]
# Run mypy . --explicit-package-bases. We use py.typed.
files = "."

follow_imports = "skip"
ignore_missing_imports = false
warn_unreachable = true
check_untyped_defs = true  # This is for tests.

[tool.pytest.ini_options]
addopts = "--cov=rdw_ingestion_tools --cov-report=term-missing"
filterwarnings = []

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle + pyflakes == flake8 - mccabe
    "I",           # isort
    "B",           # flake8-bugbear
    "UP",          # pyupgrade
    "S",           # flake8-bandit
    "C4",          # flake8-comprehensions
    "PIE",         # flake8-pie
    "SIM",         # flake8-simplify
    "PTH",         # flake8-use-pathlib
]
ignore = [
    "E402",   # Example: src/api/flow_results/__init__.py:80:0
    "S101",   # Starlette err handler: tests/fake_aaqv2/api.py
]
